// ============================================================
// BlockTrace — Prisma Schema (PostgreSQL)
// Dựa theo flowchart: Producer → Distributor → Consumer
// ============================================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ─── ROLES ───────────────────────────────────────────────────
model Role {
  id                uuid    @id @default(uuid())
  name              String  @unique
  // PRODUCER_ROLE | DISTRIBUTOR_ROLE | RETAILER_ROLE
  // INSPECTOR_ROLE | DISPUTE_RESOLVER_ROLE | AUDITOR_ROLE | DEFAULT_ADMIN_ROLE
  description       String?
  onChainRoleHash   String? @map("on_chain_role_hash")
  // keccak256 bytes32 từ smart contract

  createdAt         DateTime @default(now()) @map("created_at")

  users             User[]

  @@map("roles")
}

// ─── USERS ───────────────────────────────────────────────────
model User {
  id              String   @id @default(uuid())
  walletAddress   String   @unique @map("wallet_address")
  // Ethereum wallet — liên kết on-chain actor
  email           String?  @unique
  name            String
  roleId          String   @map("role_id")
  organization    String?
  isActive        Boolean  @default(true) @map("is_active")
  createdAt       DateTime @default(now()) @map("created_at")
  updatedAt       DateTime @updatedAt @map("updated_at")

  role                  Role   @relation(fields: [roleId], references: [id])

  // Phase 1: Producer tạo batch
  producedBatches       Batch[]  @relation("ProducerBatches")
  // Phase 3: Distributor/Retailer sở hữu batch
  ownedBatches          Batch[]  @relation("OwnerBatches")

  transfersFrom         BatchTransfer[] @relation("TransferFrom")
  transfersTo           BatchTransfer[] @relation("TransferTo")
  reportedIssues        Issue[]
  resolvedIssues        Resolution[]
  inspections           QualityInspection[]
  buyerOrders           Order[]  @relation("BuyerOrders")
  sellerOrders          Order[]  @relation("SellerOrders")

  @@map("users")
}

// ─── BATCHES ─────────────────────────────────────────────────
// Phase 1: Producer Creates Metadata → Upload → Hash → Mint ERC721 → QR
model Batch {
  id            String   @id @default(uuid())
  tokenId       BigInt   @unique @map("token_id")
  // tokenId on-chain — ERC721 NFT identifier

  batchNumber   String   @map("batch_number")
  productName   String   @map("product_name")
  origin        String
  harvestDate   DateTime? @map("harvest_date")
  certification String?
  // VietGAP | GlobalGAP | Organic

  // Phase 1 Step 2-3: Upload metadata + Generate Hash
  metadataHash  String   @map("metadata_hash")
  // SHA-256(metadata JSON) — khớp on-chain metadataHash
  metadataCid   String   @map("metadata_cid")
  // IPFS CID — ipfs://Qm123...

  // Phase 1 Step 4: Mint NFT
  mintTxHash    String?  @map("mint_tx_hash")

  // Phase 2: Generate QR
  qrUrl         String?  @map("qr_url")
  // https://blocktrace.app/verify/{token_id}

  // Ownership (Phase 3: Distributor nhận hàng → Transfer Ownership)
  producerId      String  @map("producer_id")
  currentOwnerId  String  @map("current_owner_id")

  currentStatus String  @default("CREATED") @map("current_status")
  // CREATED | PACKED | IN_TRANSIT | DELIVERED
  // UNDER_REVIEW | RECALLED | RESOLVED
  isRecalled    Boolean @default(false) @map("is_recalled")

  createdAt     DateTime @default(now()) @map("created_at")
  updatedAt     DateTime @updatedAt @map("updated_at")

  producer      User   @relation("ProducerBatches", fields: [producerId], references: [id])
  currentOwner  User   @relation("OwnerBatches", fields: [currentOwnerId], references: [id])

  transfers           BatchTransfer[]
  issues              Issue[]
  orders              Order[]
  inspections         QualityInspection[]
  consumerVerifications ConsumerVerification[]

  @@index([currentStatus])
  @@index([producerId])
  @@map("batches")
}

// ─── BATCH TRANSFERS ─────────────────────────────────────────
// Phase 3: Distributor Scans QR → Verify → Update Status → Transfer Ownership
// Append-only log — không update, không delete
model BatchTransfer {
  id              String   @id @default(uuid())
  batchId         String   @map("batch_id")

  fromUserId      String?  @map("from_user_id")
  // Null nếu là mint ban đầu
  toUserId        String   @map("to_user_id")

  // Phase 3 Step 6: Verify Token Authenticity
  verifiedOnScan  Boolean  @default(false) @map("verified_on_scan")

  // Phase 3 Step 7: Update Shipment Status
  statusAtTransfer String  @map("status_at_transfer")
  // IN_TRANSIT | DELIVERED | ...
  txHash          String?  @map("tx_hash")
  // Tx hash của updateShipmentStatus() hoặc transferBatchOwnership()

  transferredAt   DateTime @default(now()) @map("transferred_at")
  notes           String?

  batch     Batch  @relation(fields: [batchId], references: [id])
  fromUser  User?  @relation("TransferFrom", fields: [fromUserId], references: [id])
  toUser    User   @relation("TransferTo", fields: [toUserId], references: [id])

  @@index([batchId])
  @@index([batchId, transferredAt])
  @@map("batch_transfers")
}

// ─── ISSUES ──────────────────────────────────────────────────
// Phase 4: Issue Detected → Create Report → Upload Evidence
//          → Generate Issue Hash → Record Issue On-chain
model Issue {
  id            String   @id @default(uuid())
  batchId       String   @map("batch_id")
  reportedById  String   @map("reported_by_id")
  // DISTRIBUTOR | RETAILER | INSPECTOR

  // Phase 4 Step 8: Issue type
  issueType     String   @map("issue_type")
  // TEMPERATURE_VIOLATION | PACKAGING_DAMAGE
  // BATCH_MISMATCH | QUALITY_DEFECT | OTHER
  description   String

  // Phase 4 Step 9: Upload Evidence Off-chain
  evidenceCid   String?  @map("evidence_cid")
  // IPFS CID — ảnh, PDF bằng chứng

  // Phase 4 Step 9→10: Generate Hash + Record On-chain
  issueHash     String   @map("issue_hash")
  // SHA-256(evidence) — neo on-chain qua reportIssue()
  reportTxHash  String?  @map("report_tx_hash")

  status        String   @default("OPEN")
  // OPEN | UNDER_REVIEW | RESOLVED | RECALLED | CLOSED

  createdAt     DateTime @default(now()) @map("created_at")
  updatedAt     DateTime @updatedAt @map("updated_at")

  batch       Batch  @relation(fields: [batchId], references: [id])
  reportedBy  User   @relation(fields: [reportedById], references: [id])
  resolution  Resolution?

  @@index([batchId])
  @@index([status])
  @@map("issues")
}

// ─── RESOLUTIONS ─────────────────────────────────────────────
// Phase 5: Resolution Proposal → Confirm Resolution
// Chỉ DISPUTE_RESOLVER_ROLE được ghi
model Resolution {
  id            String   @id @default(uuid())
  issueId       String   @unique @map("issue_id")
  // 1:1 với issue — 1 issue chỉ có 1 resolution finalized
  resolvedById  String   @map("resolved_by_id")
  // DISPUTE_RESOLVER_ROLE

  // Phase 5 Step 11: Resolution type
  resolutionType String  @map("resolution_type")
  // REFUND | REPLACE | DISCOUNT | RECALL | NO_ACTION
  notes         String?

  // Phase 5 Step 12: Confirm → on-chain
  settlementHash String  @map("settlement_hash")
  // Hash của settlement document
  settlementCid  String? @map("settlement_cid")
  // IPFS CID — biên bản xử lý đầy đủ
  resolveTxHash  String? @map("resolve_tx_hash")
  // Tx hash của resolveIssue() call

  resolvedAt    DateTime @default(now()) @map("resolved_at")

  issue       Issue  @relation(fields: [issueId], references: [id])
  resolvedBy  User   @relation(fields: [resolvedById], references: [id])

  @@map("resolutions")
}

// ─── CONSUMER VERIFICATIONS ──────────────────────────────────
// Phase 6: Consumer Scans QR → Fetch On-chain → Fetch IPFS
//          → Recalculate Hash → Hash Match? → AUTHENTIC / TAMPERED
model ConsumerVerification {
  id                  String   @id @default(uuid())
  tokenId             BigInt   @map("token_id")
  // tokenId từ QR scan
  batchId             String?  @map("batch_id")

  // Phase 6 Step 14-15: Fetch on-chain + IPFS
  fetchedMetadataCid  String?  @map("fetched_metadata_cid")
  onchainHash         String?  @map("onchain_hash")
  // metadataHash đọc từ on-chain

  // Phase 6 Step 16: Recalculate + Compare
  computedHash        String?  @map("computed_hash")
  // SHA-256 recomputed từ fetched metadata
  hashMatched         Boolean  @map("hash_matched")
  // true = AUTHENTIC | false = DATA TAMPERED

  verificationResult  String   @map("verification_result")
  // AUTHENTIC | TAMPERED

  scannedAt           DateTime @default(now()) @map("scanned_at")
  scannerIp           String?  @map("scanner_ip")

  batch  Batch? @relation(fields: [batchId], references: [id])

  @@index([tokenId])
  @@index([tokenId, scannedAt])
  @@index([hashMatched])
  @@map("consumer_verifications")
}

// ─── ORDERS ──────────────────────────────────────────────────
// Business layer: đặt hàng → escrow → giao hàng → giải ngân
model Order {
  id                  String   @id @default(uuid())
  orderChainHash      String   @unique @map("order_chain_hash")
  // Hash đơn hàng — liên kết on-chain
  batchId             String   @map("batch_id")
  buyerId             String   @map("buyer_id")
  sellerId            String   @map("seller_id")

  totalAmount         Decimal  @map("total_amount") @db.Decimal(18, 6)
  currency            String   @default("VND")
  // VND | USDT | USDC

  escrowId            String?  @map("escrow_id")
  escrowStatus        String   @default("PENDING") @map("escrow_status")
  // PENDING | HELD | RELEASED | REFUNDED
  orderStatus         String   @default("PLACED") @map("order_status")
  // PLACED | CONFIRMED | PACKED | IN_TRANSIT
  // DELIVERED | SETTLED | CANCELLED

  proofOfDeliveryCid  String?  @map("proof_of_delivery_cid")
  // IPFS CID — ảnh, chữ ký, GPS
  deliveredAt         DateTime? @map("delivered_at")
  settledAt           DateTime? @map("settled_at")

  createdAt           DateTime @default(now()) @map("created_at")
  updatedAt           DateTime @updatedAt @map("updated_at")

  batch   Batch  @relation(fields: [batchId], references: [id])
  buyer   User   @relation("BuyerOrders", fields: [buyerId], references: [id])
  seller  User   @relation("SellerOrders", fields: [sellerId], references: [id])

  @@index([batchId])
  @@index([orderStatus])
  @@map("orders")
}

// ─── QUALITY INSPECTIONS ─────────────────────────────────────
// Weighted Scoring Model: 50% IoT + 50% Human Oracle
model QualityInspection {
  id            String   @id @default(uuid())
  batchId       String   @map("batch_id")
  inspectorId   String   @map("inspector_id")
  // INSPECTOR_ROLE

  iotScore      Decimal? @map("iot_score") @db.Decimal(5, 2)
  // 0-100: nhiệt độ, độ ẩm, GPS deviation
  humanScore    Decimal? @map("human_score") @db.Decimal(5, 2)
  // 0-100: màu sắc, cảm quan, kích thước
  finalScore    Decimal? @map("final_score") @db.Decimal(5, 2)
  // 50% iotScore + 50% humanScore
  qualityFlag   String?  @map("quality_flag")
  // PASS | FAIL | HOLD

  inspectionHash String  @map("inspection_hash")
  // Hash biên bản — neo on-chain
  reportCid     String?  @map("report_cid")
  // IPFS CID — PDF báo cáo đầy đủ

  inspectedAt   DateTime @default(now()) @map("inspected_at")

  batch     Batch  @relation(fields: [batchId], references: [id])
  inspector User   @relation(fields: [inspectorId], references: [id])

  @@index([batchId])
  @@index([qualityFlag])
  @@map("quality_inspections")
}
